[package]
name = "umap_viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { version = "0.27.2", features = ["mint"] }
eframe = { version = "0.27.2" , features = []}
nalgebra = "0.32.5"
egui-keybind = "0.3.0"
zune-jpeg = "0.5.0-rc0"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"